--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "@google/genai": "^1.16.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
