--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,16 +12,24 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@monaco-editor/react": "^4.7.0-rc.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.12.2",
-    "daisyui": "^5.0.50",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.15",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.8.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "zod": "^4.0.17"
   },
@@ -34,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tw-animate-css": "^1.3.8",
     "vite": "^7.1.5"
   }
 }
